# log-search-index

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md  RELEASE.md  deny.toml
.agents/skills/cavecrew/: SKILL.md
.agents/skills/caveman-compress/: README.md  SKILL.md
.agents/skills/caveman-compress/scripts/: benchmark.py  cli.py  compress.py  detect.py  validate.py
.context/: README.md  architecture.md  git-workflow.md  operating-rules.md  project.md  traps.md  v0.2.x-summary.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  lib.rs  main.rs  router.rs  state.rs
crates/api/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  prune_cmd.rs  render.rs  stats_cmd.rs
crates/cli/tests/: concurrent.rs
crates/core/: Cargo.toml
crates/core/benches/: bench_ingest.rs  bench_query.rs
crates/core/src/: entry.rs  error.rs  executor.rs  follow.rs  indexer.rs  lib.rs  query.rs
crates/core/src/parsers/: json.rs  logfmt.rs  mod.rs  plain.rs
crates/core/tests/: cross_format.rs  proptest_query.rs  security.rs
docs/superpowers/plans/: 2026-06-04-landing-page.md
docs/superpowers/specs/: 2026-06-04-logdive-landing-design.md
examples/: README.md
import-progress/: step-002.txt  step-003.txt  step-004.txt  step-005.txt  step-006.txt  step-007.txt  step-008.txt  step-009.txt  step-010.txt  step-011.txt  step-012.txt  step-013.txt  step-014.txt  step-015.txt  step-016.txt  step-017.txt  step-018.txt  step-019.txt  step-020.txt  step-021.txt  step-022.txt  step-023.txt  step-024.txt  step-025.txt  step-026.txt  step-027.txt  step-028.txt  step-029.txt  step-030.txt  step-031.txt  step-032.txt  step-033.txt  step-034.txt  step-035.txt  step-036.txt  step-037.txt  step-038.txt  step-039.txt  step-040.txt  step-041.txt  (+59 more)
landing/: astro.config.ts  package.json
landing/src/components/: CodeBlock.astro  Footer.astro  Header.astro  RoadmapStatus.astro  Tabs.astro  TerminalPreview.astro
landing/src/data/: roadmap.ts
landing/src/layouts/: Base.astro
landing/src/pages/: about.astro  docs.astro  index.astro
landing/src/styles/: components.css  global.css  tokens.css
scripts/: audit.sh  check-binary-size.sh  prerelease-check.sh  sbom.sh
