[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/api",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Arya (ArySmart) Gorjipour"]
repository = "https://github.com/Aryagorjipour/logdive"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
# Internal
logdive-core = { path = "crates/core", version = "0.3.0" }

# Core: storage, hashing, serialization, time
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
anstream = "1"
anstyle = "1"

# HTTP API
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Observability (logdive's own internal logging, per decisions log)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev
tempfile = "3"
criterion = "0.5"
proptest = "1"

# Release profile — targets the "<10MB binary" task in Phase 4
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"