[package]
name = "logdive-api"
description = "Read-only HTTP API server for a logdive index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "logdive_api"
path = "src/lib.rs"

[[bin]]
name = "logdive-api"
path = "src/main.rs"

[dependencies]
logdive-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
http-body-util.workspace = true
