[package]
name = "logdive"
description = "Fast, self-hosted query engine for structured JSON logs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
default-run = "logdive"

[[bin]]
name = "logdive"
path = "src/main.rs"

[dependencies]
logdive-core.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anstream.workspace = true
anstyle.workspace = true
serde_json.workspace = true
chrono.workspace = true
# Cross-platform filesystem event watcher. Used by --follow on Unix.
notify = "6.1"
# Clean Ctrl-C / SIGINT handler for the --follow watch loop.
ctrlc = "3.5"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
