[package]
name = "logdive-core"
description = "Core library for logdive: structured JSON log parsing, SQLite indexing, and query engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords = ["logs", "json", "sqlite", "query", "cli"]
categories = ["command-line-utilities", "database", "parser-implementations"]

[lib]
name = "logdive_core"
path = "src/lib.rs"

[dependencies]
rusqlite.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "bench_ingest"
harness = false

[[bench]]
name = "bench_query"
harness = false
